CRITICAL: resolves Form submit and Canvas click inputs inconsistency

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -24,21 +24,22 @@
                 <h:form id="form">
                     <h2 style="color: #a3e635; margin-top: 0;">Input Parameters</h2>
 
-                    <!-- Messages -->
                     <p:messages id="p-messages" showDetail="true" closable="true" style="margin-bottom: 10px;"/>
 
-                    <!-- HIDDEN INPUTS: Linked to InputBean -->
-                    <h:inputHidden id="canvas_x" value="#{inputBean.x}"/>
-                    <h:inputHidden id="canvas_y" value="#{inputBean.y}"/>
+                    <!-- HIDDEN INPUTS -->
+                    <h:inputHidden id="canvas_x" value="#{inputBean.canvasX}"/>
+                    <h:inputHidden id="canvas_y" value="#{inputBean.canvasY}"/>
                     <h:inputHidden id="canvas_r" value="#{inputBean.r}"/>
                     <h:inputHidden id="is_canvas_submit" value="#{inputBean.canvasSubmission}"/>
 
+                    <!--
+                        Explicitly call checkCanvas
+                    -->
                     <p:remoteCommand name="processCanvasClick"
-                                     actionListener="#{checkBean.checkArea}"
+                                     actionListener="#{checkBean.checkCanvas}"
                                      update=":results-table-container form:p-messages :graph-panel"
                                      process="@this canvas_x canvas_y canvas_r is_canvas_submit"
                                      oncomplete="initGraph()" />
-
 
                     <!-- R Value Selection -->
                     <h:panelGroup layout="block" style="margin-bottom: 20px;">
@@ -46,8 +47,6 @@
                         <h:selectOneRadio id="r_radio_group" value="#{inputBean.r}" layout="pageDirection" required="true">
                             <f:selectItems value="#{inputBean.rOptions}" var="rVal" itemLabel="#{rVal}" itemValue="#{rVal}" />
                             <f:validateLongRange minimum="1" maximum="5" />
-
-                            <!-- When R changes, update graph panel and redraw -->
                             <p:ajax event="change" listener="#{inputBean.validateR}"
                                     update="form:p-messages :graph-panel @form:canvas_r"
                                     process="@this"
@@ -78,9 +77,12 @@
                     </h:panelGroup>
 
                     <!-- Normal Form Submit Button -->
+                    <!--
+                         Explicitly call checkForm.
+                         Removed 'action' coz the bean now handles the boolean flag.
+                    -->
                     <p:commandButton value="Check Area"
-                                     action="#{inputBean.setCanvasSubmission(false)}"
-                                     actionListener="#{checkBean.checkArea}"
+                                     actionListener="#{checkBean.checkForm}"
                                      update=":results-table-container form:p-messages :graph-panel"
                                      process="@form"
                                      oncomplete="initGraph()"
@@ -92,34 +94,20 @@
                 </h:form>
             </div>
 
-            <!-- Right Panel: Graph and Table -->
             <div style="flex: 1;">
-
-                <!--
-                   GRAPH PANEL
-                   Using p:outputPanel ensures the whole block (canvas + data script)
-                   is replaced when updated via AJAX.
-                -->
                 <p:outputPanel id="graph-panel" layout="block" style="text-align: center; background: #3c3c3c; padding: 10px; border-radius: 8px; margin-bottom: 20px;">
                     <h2 style="color: #a3e635; margin-top: 0;">Graph</h2>
-
                     <canvas id="graph-canvas" width="400" height="400" style="background-color: #373737; border: 1px solid #60a5fa; cursor: crosshair;"></canvas>
-
-                    <!-- DATA INJECTION SCRIPT -->
-                    <!-- This runs every time 'graph-panel' is updated by AJAX -->
                     <script>
                         (function() {
                             try {
-                                // Inject values from the Beans into global window variables
                                 window.currentR = parseFloat('#{inputBean.r}');
                                 window.currentPoints = JSON.parse('#{resultBean.pointsJson}');
                             } catch (e) {
                                 console.error("Error parsing graph data:", e);
                                 window.currentPoints = [];
-                                window.currentR = 3.0; // Default fallback
+                                window.currentR = 3.0;
                             }
-
-                            // Re-draw the graph immediately
                             if(typeof initGraph === 'function') {
                                 initGraph();
                             }
@@ -127,13 +115,11 @@
                     </script>
                 </p:outputPanel>
 
-                <!-- Results Table -->
                 <h:panelGroup id="results-table-container" layout="block">
                     <h2 style="color: #e0f2fe;">Results</h2>
                     <p:dataTable id="results-table" value="#{resultBean.results}" var="res"
                                  emptyMessage="No results yet."
                                  styleClass="p-datatable-striped">
-
                         <p:column headerText="R"><h:outputText value="#{res.r}"/></p:column>
                         <p:column headerText="X"><h:outputText value="#{res.x}"/></p:column>
                         <p:column headerText="Y"><h:outputText value="#{res.y}"/></p:column>
@@ -144,12 +130,9 @@
                         <p:column headerText="Exec (ms)"><h:outputText value="#{res.formattedExecutionTime}"/></p:column>
                     </p:dataTable>
                 </h:panelGroup>
-
             </div>
         </div>
     </div>
-
-    <!-- Draws graph on initial full page load -->
     <script>
         window.addEventListener('load', function() {
            if(typeof initGraph === 'function') initGraph();
